fixing bug #1439 when user have no email or smtp settings were not correct, redirection was not correctly done

--- a/config-core/src/main/config/silvertrace/messages/authenticationMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/authenticationMessages_en.properties
@@ -52,3 +52,4 @@ authentication.MSG_USER_AUTHENTIFIED = Utilisateur Authentifié
 
 
 authentication.UNEXPECTED_EROR = Unexpected error
+forgottenPassword.EX_SEND_MAIL = A user tried to reset his password without success. The e-mail asking him to confirm his request could not be sent.
