--- a/config-core/src/main/config/silvertrace/messages/authenticationMessages_fr.properties
+++ b/config-core/src/main/config/silvertrace/messages/authenticationMessages_fr.properties
@@ -51,3 +51,5 @@ authentication.MSG_TRY_TO_AUTHENTICATE_USER = Essaye d'authentifier de l'utilisa
 authentication.MSG_USER_AUTHENTIFIED = Utilisateur Authentifié
 
 authentication.UNEXPECTED_EROR = Erreur inattendue
+
+forgottenPassword.EX_SEND_MAIL = Un utilisateur a tenté de réinitialiser son mot de passe sans succès. Le mail lui demandant de confirmer sa demande n'a pas pu lui être envoyé.
