--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
@@ -236,8 +236,8 @@ pdcPeas.helpCol1Content1 = Um alle W\u00f6rter zu erhalten, die z.B. mit:
 pdcPeas.helpCol1Content2 = HYDRO
 pdcPeas.helpCol1Content3 = beginnen, einen Stern hinter das Wort setzen: HYDRO*
 
-pdcPeas.helpCol2Content1 = "Und" ist der implizite Operator.
-pdcPeas.helpCol2Content2 = z.B.: Hund Katze = Hund UND Katze<br>
+pdcPeas.helpCol2Content1 = "*" ist der implizite Operator
+pdcPeas.helpCol2Content2 = z.B.: Hund Katze = Hund * Katze<br>
 pdcPeas.helpCol2Content3 = Und: <b>AND</b>\u0020\u0020\u0020&#x0020;z.B.: Hund AND Katze
 pdcPeas.helpCol2Content4 = Oder: <b>OR</b>\u0020\u0020\u0020&#x0020;z.B.: HUND OR Katze
 pdcPeas.helpCol2Content5 = Nicht: <b>NOT</b>\u0020\u0020\u0020&#x0020;Ex.: Katze NOT Siamese
@@ -247,7 +247,10 @@ pdcPeas.helpCol3Content2 = z.B.: "Reservation eines Saales"
 pdcPeas.helpCol3Content3 = 
 pdcPeas.helpCol3Content4 = 
 
-pdcPeas.openUserPanelPeas           = Zugang zum Benutzer-Panel
+pdcPeas.help.operand.OR = ODER
+pdcPeas.help.operand.AND = UND
+
+pdcPeas.openUserPanelPeas = Zugang zum Benutzer-Panel
 
 pdcPeas.classifyImpossible = Klassierung momentan unm\u00f6glich. Vom Administrator ist keine Klassierungsrichtung gew\u00e4hlt worden.
 
