--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -244,8 +244,8 @@ pdcPeas.helpCol1Content1 = To get all the words beginning with:
 pdcPeas.helpCol1Content2 = HYDRO
 pdcPeas.helpCol1Content3 = Add an asterisk to the end of the word: HYDRO*
 
-pdcPeas.helpCol2Content1 = "and" is the implicit operator.
-pdcPeas.helpCol2Content2 = Ex. : Dog Cat = Dog AND Cat<br>
+pdcPeas.helpCol2Content1 = "*" is the implicit operator
+pdcPeas.helpCol2Content2 = Ex. : Dog Cat = Dog * Cat<br>
 pdcPeas.helpCol2Content3 = And : <b>AND</b>&nbsp;&nbsp;&nbsp;&nbsp;i.e.: Dog AND Cat
 pdcPeas.helpCol2Content4 = Or : <b>OR</b>&nbsp;&nbsp;&nbsp;&nbsp;i.e.: Dog OR Cat
 pdcPeas.helpCol2Content5 = Except : <b>NOT</b>&nbsp;&nbsp;&nbsp;&nbsp;i.e. : Cat NOT Siamese
@@ -255,7 +255,10 @@ pdcPeas.helpCol3Content2 = Ex. : "room booking"
 pdcPeas.helpCol3Content3 = 
 pdcPeas.helpCol3Content4 = 
 
-pdcPeas.openUserPanelPeas           = Access to user panel
+pdcPeas.help.operand.OR = OR
+pdcPeas.help.operand.AND = AND
+
+pdcPeas.openUserPanelPeas = Access to user panel
 
 pdcPeas.classifyImpossible = Classification is not possible for the moment. No classification topics has been defined by the manager.
 
