--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
@@ -237,8 +237,8 @@ pdcPeas.helpCol1Content1 = Pour obtenir tous les mots commen\u00e7ant par exempl
 pdcPeas.helpCol1Content2 = HYDRO
 pdcPeas.helpCol1Content3 = mettre un ast\u00e9risque \u00e0 la fin du mot : HYDRO*
 
-pdcPeas.helpCol2Content1 = "Et" est l'op\u00e9rateur implicite.
-pdcPeas.helpCol2Content2 = Ex. : Chien Chat = Chien AND Chat<br>
+pdcPeas.helpCol2Content1 = "*" est l'op\u00e9rateur implicite
+pdcPeas.helpCol2Content2 = Ex. : Chien Chat = Chien * Chat<br>
 pdcPeas.helpCol2Content3 = Et : <b>AND</b>&nbsp;&nbsp;&nbsp;&nbsp;Ex.: Chien AND Chat
 pdcPeas.helpCol2Content4 = Ou : <b>OR</b>&nbsp;&nbsp;&nbsp;&nbsp;Ex.: Chien OR Chat
 pdcPeas.helpCol2Content5 = Sauf : <b>NOT</b>&nbsp;&nbsp;&nbsp;&nbsp;Ex.: Chat NOT siamois
@@ -248,8 +248,10 @@ pdcPeas.helpCol3Content2 = Ex. : "r\u00e9servation de salles"
 pdcPeas.helpCol3Content3 = 
 pdcPeas.helpCol3Content4 = 
 
+pdcPeas.help.operand.OR = OU
+pdcPeas.help.operand.AND = ET
 
-pdcPeas.openUserPanelPeas           = Acc\u00e8der au panneau d'utilisateurs
+pdcPeas.openUserPanelPeas = Acc\u00e8der au panneau d'utilisateurs
 
 pdcPeas.classifyImpossible = Classement impossible pour l'instant. Aucun axe de classement n'a \u00e9t\u00e9 d\u00e9fini par le gestionnaire.
 
