--- a/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_de.properties
@@ -37,7 +37,7 @@ JDP.domainSynchroReport = Bericht der Domain
 JDP.domains = Domains
 JDP.domaine = Domain
 JDP.silverpeasServerURL = Zugangs-URL zum Silverpeas-Server
-JDP.silverpeasServerURLEx = (z.B.: 'http://myextranet.mydomain.com')
+JDP.silverpeasServerURLEx = z.B.: 'http://myextranet.mydomain.com'
 
 JDP.jobDomain = Verweis
 
@@ -125,7 +125,8 @@ JDP.importSelected = Ausgew\u00e4hlte Benutzer importieren
 JDP.sendEmail = Verbindungseinstellungen per Email senden :
 JDP.createAccountNotifTitle = Silverpeas - Ihr Account ID
 
-JDP.userDomainQuotaMaxCount = Maximum number of users (0 for unlimited)
+JDP.userDomainQuotaMaxCount = Maximum number of users
+JDP.userDomainQuotaMaxCountHelp = 0 for unlimited
 JDP.userDomainQuotaMaxCountError = The maximum number of users specified for the domain is incorrect.
 JDP.userDomainQuotaCurrentCount = {0} {0,choice, 1#registered user| 1<registered users}
 JDP.userDomainQuotaFull = The maximum number of users is reached
