--- a/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_en.properties
@@ -35,8 +35,8 @@ JDP.domainSynchro = Synchronize the domain
 JDP.domainSynchroReport = Synchronisation report
 JDP.domains = Domains
 JDP.domaine = Domain
-JDP.silverpeasServerURL = URL to access Silverpeas server
-JDP.silverpeasServerURLEx = (ex : 'http://myextranet.mydomain.com')
+JDP.silverpeasServerURL = URL to the platform
+JDP.silverpeasServerURLEx = ex : 'http://myextranet.mydomain.com'
 
 JDP.jobDomain = Register
 
@@ -125,7 +125,8 @@ JDP.importSelected = Import the selected users
 JDP.sendEmail = Send account parameters by email :
 JDP.createAccountNotifTitle = Silverpeas - Account parameters
 
-JDP.userDomainQuotaMaxCount = Maximum number of users (0 for unlimited)
+JDP.userDomainQuotaMaxCount = Maximum number of users
+JDP.userDomainQuotaMaxCountHelp = 0 for unlimited
 JDP.userDomainQuotaMaxCountError = The maximum number of users specified for the domain is incorrect.
 JDP.userDomainQuotaCurrentCount = {0} {0,choice, 1#registered user| 1<registered users}
 JDP.userDomainQuotaFull = The maximum number of users is reached
