closing feature #3458, integration of Aurore's touch

--- a/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_de.properties
@@ -130,3 +130,4 @@ JDP.userDomainQuotaMaxCountHelp = 0 for unlimited
 JDP.userDomainQuotaMaxCountError = The maximum number of users specified for the domain is incorrect.
 JDP.userDomainQuotaCurrentCount = {0} {0,choice, 1#registered user| 1<registered users}
 JDP.userDomainQuotaFull = The maximum number of users is reached
+JDP.quota = Limited to * users
