--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_en.properties
@@ -170,6 +170,7 @@ GML.upload						= Download
 GML.user						= User
 GML.users						= Users
 GML.user_s                      = user(s)
+GML.group_s						= group(s)
 
 GML.validate						= Ok
 GML.viewCalendar					= Display calendar
