--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_fr.properties
@@ -171,6 +171,7 @@ GML.upload						= T\u00e9l\u00e9chargement
 GML.user						= Utilisateur
 GML.users						= Utilisateurs
 GML.user_s                      = utilisateur(s)
+GML.group_s						= groupe(s)
 
 GML.validate					        = Valider
 GML.viewCalendar					= Afficher le calendrier
