closing definitively feature #3600 integration of Aurore's icons and homogenizing terminology

--- a/config-core/src/main/config/properties/org/silverpeas/agenda/multilang/agenda_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/agenda/multilang/agenda_en.properties
@@ -71,9 +71,8 @@ priorite3 = Low
 
 # Operation
 fermer = Close
-nouvelleNote = New event
+nouvelleNote = Create an event
 confirmationSuppressionNote = Are you sure you want to remove 
-ajouterNote = Add an event
 ajouter = Add
 supprimer = Delete
 mettreAJour = Update
