--- a/config-core/src/main/config/properties/org/silverpeas/agenda/multilang/agenda_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/agenda/multilang/agenda_fr.properties
@@ -72,9 +72,8 @@ priorite3 = Basse
 
 # Operation
 fermer = Fermer 
-nouvelleNote = Nouvel \u00E9v\u00E9nement
+nouvelleNote = Cr\u00E9er un \u00E9v\u00E9nement
 confirmationSuppressionNote = Etes-vous s\u00FBr de vouloir supprimer l'\u00E9v\u00E9nement
-ajouterNote = Nouvel \u00E9v\u00E9nement
 ajouter = Ajouter 
 supprimer = Supprimer 
 mettreAJour = Valider
