--- a/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_fr.properties
@@ -23,8 +23,8 @@
 #
 JDP.class = Classe Java utilis\u00E9e
 
-JDP.domainAdd = Ajouter un domaine
-JDP.domainSQLAdd = Ajouter un domaine SQL
+JDP.domainAdd = Cr\u00E9er un domaine LDAP
+JDP.domainSQLAdd = Cr\u00E9er un domaine SQL
 JDP.domainDel = Supprimer le domaine
 JDP.domainSQLDel = Supprimer le domaine SQL
 JDP.domainDelConfirm = Etes-vous s\u00FBr(e) de vouloir supprimer ce domaine ?\\nAttention, ceci supprimera tous les utilisateurs et tous les groupes de ce domaine.
