--- a/config-core/src/main/config/properties/org/silverpeas/mylinks/multilang/myLinksBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/mylinks/multilang/myLinksBundle_en.properties
@@ -22,15 +22,15 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 myLinks.links = Favorits links
-myLinks.linksByComponent = Links by application
-myLinks.createLink = > Create a link
-myLinks.updateLink = > Update a link
-myLinks.addLink = Add a link
-myLinks.visible = Visible in banner page 
+myLinks.linksByComponent = Bookmarks by application
+myLinks.createLink = > Create a bookmark
+myLinks.updateLink = > Update a bookmark
+myLinks.addLink = Create a bookmark
+myLinks.visible = Visible in home page 
 myLinks.url = Url
 myLinks.popup = Open in a popup
 myLinks.operation = Operations
-myLinks.deleteLinks = Delete selected links
-myLinks.deleteSelection = Do you really want to delete selected links?
+myLinks.deleteLinks = Delete selected bookmarks
+myLinks.deleteSelection = Do you really want to delete selected bookmarks?
 myLinks.messageConfirm = The link has been added to your favorites
 myLinks.retour = Return to the application
