--- a/config-core/src/main/config/properties/org/silverpeas/pdcSubscriptionPeas/multilang/pdcSubscriptionBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/pdcSubscriptionPeas/multilang/pdcSubscriptionBundle_en.properties
@@ -22,14 +22,14 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 ICName = Name
-RequestName = Interest center name
-EmtyICName = Please fill the interest center name
+RequestName = Subscription name
+EmtyICName = Please fill the subscription name
 ICName = Name
 NameExists = This name is already used. Do you want to overwrite it ?
 
 name  = Name
 value = Value
-AddSC = New interest center
+AddSC = Create a subscription
 DeleteSC = Delete
 EditSC = Update
 
@@ -38,5 +38,5 @@ Path = My subscriptions
 Operations = Operations
 
 pdc = Categorization
-emplacement = Themes
-thematique = Themes
+emplacement = Folders
+thematique = Folders
