--- a/config-core/src/main/config/properties/org/silverpeas/personalizationPeas/multilang/personalizationBundle_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/personalizationPeas/multilang/personalizationBundle_fr.properties
@@ -59,12 +59,12 @@ ParametrerNotification = Param\u00E9trage
 LireNotification = Bo\u00EEte de notification
 SendedUserNotifications = Notifications envoy\u00E9es
 
-Notifier = Envoi d'une notification
+Notifier = Envoyer une notification
 MessageSuppressionCanal = Etes-vous s\u00FBr de vouloir supprimer ce canal ?
 MessageSuppressionRegle = Etes-vous s\u00FBr de vouloir supprimer cette r\u00E8gle ?
 
 channelChoiceLabel = Choix du canal de notification :
-frequencyChoiceLabel = Fréquence de réception des mails :
+frequencyChoiceLabel = Fr\u00E9quence de réception des mails :
 
 frequencyDefault=Par d\u00E9faut ({0})
 frequencyNONE=Instantan\u00E9e
