--- a/config-core/src/main/config/properties/org/silverpeas/mylinks/multilang/myLinksBundle_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/mylinks/multilang/myLinksBundle_fr.properties
@@ -25,7 +25,7 @@ myLinks.links = Mes liens favoris
 myLinks.linksByComponent = Liens de l'application
 myLinks.createLink = > Créer un lien favori
 myLinks.updateLink = > Modifier un lien favori
-myLinks.addLink = Ajouter un lien
+myLinks.addLink = Créer un lien
 myLinks.visible = Visible en page d'accueil
 myLinks.url = Url
 myLinks.popup = Ouvrir dans une nouvelle fenêtre
