Feature #3216 - adjusting some multi-language property files following a merge operation

--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_de.properties
@@ -339,5 +339,9 @@ GML.validation.create=Die Informationen wurden aufgezeichnet.
 GML.validation.update=Die Informationen wurden aktualisiert.
 GML.validation.delete=Die Informationen wurden gel\u00f6scht.
 GML.confirmation.dialog.title = Best\u00E4tigung
+GML.preview.dialog.title = Preview
+GML.preview.dialog.title.of = of
+GML.preview.help.file.previous = Preview previous file
+GML.preview.help.file.next = Preview next file
 GML.Today=Heute
 GML.Tomorrow=Morgen
