--- a/config-core/src/main/config/properties/org/silverpeas/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/webactiv/multilang/generalMultilang_de.properties
@@ -172,6 +172,7 @@ GML.upload						= Hinaufladung
 GML.user						= Ben\u00fctzer
 GML.users						= Ben\u00fctzer
 GML.user_s                      = Ben\u00fctzer
+GML.group_s						= Gruppen
 
 GML.validate					        = Best\u00e4tigen
 GML.viewCalendar					= Kalender anzeigen
