Feature #2815 - adding data storage quota handling on spaces (collaboratives and personals)

--- a/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
@@ -23,7 +23,7 @@
 #
 JSPP.BackToMainSpacePage = Back to workspace homepage
 
-JSPP.homepageType = Type of startup page 
+JSPP.homepageType = Type of startup page
 
 JSPP.main = Main page
 JSPP.manageHomePage = Workspaces
@@ -41,8 +41,12 @@ JSPP.updateHomePage = Startup page
 JSPP.SpaceTemplate = Space templates
 JSPP.NoTemplate = Empty space
 JSPP.UPSpaceTemplateProfile = Select groups/users for the profile
+JSPP.dataStorageQuota = Allocated memory
+JSPP.dataStorageQuotaHelp = unit MB, 0 for unlimited
+JSPP.dataStorageQuotaFull = Allocated memory is fully used
+JSPP.dataStorageUsed = Used memory
 
-JSPP.welcome =  Welcome in the workspaces administration module 
+JSPP.welcome =  Welcome in the workspaces administration module
 
 JSPP.maintenanceTout = The platform is down for maintenance!
 JSPP.maintenanceStatus.0 = The space is not under maintenance
@@ -87,16 +91,16 @@ JSPP.roleDescription = Role description
 
 # erreurs
 MustContainsText = must be completed
-ThisFormContains = Warning! This form contains 
-ContainsTooLargeText = must not contain more than 
-NbMaxTextArea = 2000 
+ThisFormContains = Warning! This form contains
+ContainsTooLargeText = must not contain more than
+NbMaxTextArea = 2000
 Characters = characters
 JSPP.MustBeginsByHTTP = must contain an URL starting with http:// or https://
 
 # messages
 JSPP.MessageSuppressionSpaceBegin = Do you really want to delete this space?\\n\\n-->
 JSPP.MessageSuppressionSpaceEnd = <--\\n
-JSPP.MessageSuppressionSpaceManager = Do you really want to delete these users? 
+JSPP.MessageSuppressionSpaceManager = Do you really want to delete these users?
 JSPP.MessageSuppressionInstanceBegin = Do you really want to delete this application?\\n\\n-->
 JSPP.MessageSuppressionInstanceEnd = <--\\n
 
@@ -110,7 +114,7 @@ JSPP.reader = Readers
 JSPP.Manager.help = The role "Space managers" only allows to delegate the administration of this space to any user.<br/>By default, a "space manager" has no rights to the applications of space.<br/>Be careful to not confuse this role with "Administrators" which applies well to applications of space.
 
 # Gestion de l'ordre
-JSPP.SpaceOrder = Modify space rank 
+JSPP.SpaceOrder = Modify space rank
 JSPP.SpacePlace = Move before the space
 JSPP.PlaceLast = Move to the end
 JSPP.ComponentOrder = Modify application rank
@@ -123,7 +127,7 @@ JSPP.SpacePositionFirst = After space
 JSPP.SpacePositionLast = Before space
 
 # Copy/Cut/Paste application
-JSPP.CopyOf = Copy of 
+JSPP.CopyOf = Copy of
 
 # Deplacement de composant
 JSPP.SpaceIn = Move in the space
@@ -136,11 +140,11 @@ JSPP.movingInProgress = Move in progress...
 JSPP.BackupUnlimited = Backup/Restore applications
 JSPP.BackupSpace = Backup/Restore space's applications
 
-JSPP.ErrorComponentCreation = Error during the creation of the application 
-JSPP.ErrorComponentUpdate = Error during the updating of the application 
+JSPP.ErrorComponentCreation = Error during the creation of the application
+JSPP.ErrorComponentUpdate = Error during the updating of the application
 JSPP.ErrorComponentMessage = Check that another application of the space does not already have the same name!
-JSPP.ErrorSpaceCreation = Error during the creation of the space 
-JSPP.ErrorSpaceUpdate = Error during the updating of the space 
+JSPP.ErrorSpaceCreation = Error during the creation of the space
+JSPP.ErrorSpaceUpdate = Error during the updating of the space
 JSPP.ErrorSpaceMessage = Check that another space on the same level does not already have the same name!
 
 # Corbeille
