Feature #82 : adding link to display all versions

--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_de.properties
@@ -40,6 +40,7 @@ checkIn = Freigeben
 readOnly = Reserviert von
 at = am
 until = bis am
+allVersions = Alle Versionen...
 
 confirm.checkin.message=Wollen Sie die \u00c4nderungen speichern?
 
