--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_en.properties
@@ -21,16 +21,16 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-  type = Type
-  fichierJoint = File to attach
+type = Type
+fichierJoint = File to attach
 
-  liaisonTermin\u00e9e = linked successfully
+liaisonTermin\u00e9e = linked successfully
 
-  nomVide = The filename must not be empty!
- fichierInexistant = This file does not exist!
- liaisonInaccessible = The file cannot be found
- zip = Zip
- uploadDate = Upload date
+nomVide = The filename must not be empty!
+fichierInexistant = This file does not exist!
+liaisonInaccessible = The file cannot be found
+zip = Zip
+uploadDate = Upload date
 Up = Move up
 Down = Move down
 checkIn = Unlock
@@ -47,6 +47,7 @@ forcer=Force
 lier = Link
 
 downloadInProgress = Upload in progress...
+allVersions = All versions...
 
 CopyLink = To copy the link to this file : Right click then 'Copy shortcut'
 
