--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_fr.properties
@@ -35,6 +35,7 @@ checkIn = Lib\u00e9rer
 readOnly = R\u00e9serv\u00e9 par
 at = le
 until = jusqu'au
+allVersions = Toutes les versions...
 
 confirm.checkin.message=Voulez vous enregistrer vos modifications ?
 
