--- a/config-core/src/main/config/properties/com/silverpeas/workflowdesigner/multilang/workflowDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/workflowdesigner/multilang/workflowDesignerBundle_en.properties
@@ -160,6 +160,8 @@ workflowDesigner.unset = Deactivation
 workflowDesigner.value = Value
 workflowDesigner.workingUsers = Users Authorised to Act on an Instance of the Workflow
 
+workflowDesigner.action.js.different = The action name must be different from that of the form
+
 # Screen import
 workflowDesigner.import.filename = Workflow model to import
 
@@ -209,7 +211,7 @@ workflowDesigner.help.componentDescriptor = This screen allows: <ul>\
 
 workflowDesigner.help.action = This screen allows: <ul> \
 <li>Entering the action name, required.</li>\
-<li>Selecting the form for the action, required.</li>\
+<li>Selecting the form for the action.</li>\
 <li>Selecting the type of the action, required.</li>\
 <li>Defining the users allowed running the action.</li>\
 <li>Entering the consequences of the action using the "Consequence Editor" screen. \
