--- a/config-core/src/main/config/properties/org/silverpeas/workflowdesigner/multilang/workflowDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/workflowdesigner/multilang/workflowDesignerBundle_fr.properties
@@ -158,6 +158,8 @@ workflowDesigner.unset = Désactivation
 workflowDesigner.value = Valeur
 workflowDesigner.workingUsers = Utilisateurs autorisés à agir
 
+workflowDesigner.action.js.different = Le nom de l'action doit être différent de celui du formulaire
+
 # Screen import
 workflowDesigner.import.filename = Modèle de workflow à importer
 
@@ -208,7 +210,7 @@ workflowDesigner.help.componentDescriptor = Cet écran permet de : <ul>\
 
 workflowDesigner.help.action = L'écran permet de : <ul>\
 <li>Saisir le nom de l'action, obligatoire.</li>\
-<li>Choisir le formulaire associé à l'action, obligatoire.</li>\
+<li>Choisir le formulaire associé à l'action.</li>\
 <li>Choisir le type de l'action, obligatoire.</li>\
 <li>Définir les utilisateurs autorisés à jouer l'action.</li>\
 <li>Renseigner les conséquences induites par cette action. Chaque action doit obligatoirement \
