--- a/config-core/src/main/config/properties/org/silverpeas/workflowdesigner/multilang/workflowDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/workflowdesigner/multilang/workflowDesignerBundle_fr.properties
@@ -261,8 +261,7 @@ workflowDesigner.help.input = Il faut remplir l'un de deux premiers champs et op
 <li>Saisir la valeur du champ.</li>\
 <li>Choisir le type du champ et en conséquence la méthode d'affichage (optionnel).</li>\
 <li>Marquer le champ comme obligatoire (optionnel).</li>\
-<li>Marquer le champ comme élément en lecture seule (optionnel).</li>\
-<li>Ajouter des libellés.</li></ul>
+<li>Marquer le champ comme élément en lecture seule (optionnel).</li></ul>
 
 workflowDesigner.help.item = L'écran qui permet de : <ul>\
 <li>Saisir le nom de l'item, obligatoire.</li>\
