--- a/config-core/src/main/config/properties/org/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
@@ -108,20 +108,23 @@ templateDesigner.available = Verf\u00fcgbar
 templateDesigner.displayer.image.maxWidth = Max Breite
 templateDesigner.displayer.image.maxHeight = Max H\u00f6he
 templateDesigner.displayer.image.galleries = Fototheken
- 
+
 templateDesigner.displayer.video.width = Breite
 templateDesigner.displayer.video.height = H\u00f6he
 templateDesigner.displayer.video.autoplay = Automatische Wiedergabe
- 
+
 templateDesigner.displayer.wysiwyg.width = Breite
 templateDesigner.displayer.wysiwyg.height = H\u00f6he
 templateDesigner.displayer.wysiwyg.galleries = Fototheken
 templateDesigner.displayer.wysiwyg.fileStorages = Verf\u00fcgbare Dateienbank
- 
+
 templateDesigner.displayer.sequence.minLength = Min L\u00e4nge
 templateDesigner.displayer.sequence.startValue = Startwert
 templateDesigner.displayer.sequence.valueCreation = Wert Erzeugung
 templateDesigner.displayer.sequence.reuseAvailableValues = Wiederverwendung der verf\u00fcgbaren Werte
 templateDesigner.displayer.sequence.alwaysIncrement = Immer Inkrementieren
+templateDesigner.displayer.sequence.globalParam = Visibilit\u00e9 des valeurs
+templateDesigner.displayer.sequence.notGlobal = Chaque instance d'application à sa propre numérotation
+templateDesigner.displayer.sequence.global = La numérotation est globale à la plateforme
 
 templateDesigner.displayer.explorer.scope = Identifizierung(en)
