--- a/config-core/src/main/config/properties/org/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -120,5 +120,8 @@ templateDesigner.displayer.sequence.startValue = Start value
 templateDesigner.displayer.sequence.valueCreation = Value creation
 templateDesigner.displayer.sequence.reuseAvailableValues = Reuse available values
 templateDesigner.displayer.sequence.alwaysIncrement = Always increment
+templateDesigner.displayer.sequence.globalParam = Values visibility
+templateDesigner.displayer.sequence.notGlobal = Each application instance has its own numerotation
+templateDesigner.displayer.sequence.global = Numerotation is shared in the whole platform
 
 templateDesigner.displayer.explorer.scope = Identifier(s)
