--- a/config-core/src/main/config/properties/org/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
@@ -120,5 +120,8 @@ templateDesigner.displayer.sequence.startValue = Valeur de d\u00e9part
 templateDesigner.displayer.sequence.valueCreation = Cr\u00e9ation de valeur
 templateDesigner.displayer.sequence.reuseAvailableValues = R\u00e9utiliser les valeurs disponibles
 templateDesigner.displayer.sequence.alwaysIncrement = Toujours incr\u00e9menter
+templateDesigner.displayer.sequence.globalParam = Visibilit\u00e9 des valeurs
+templateDesigner.displayer.sequence.notGlobal = Chaque instance d'application à sa propre numérotation
+templateDesigner.displayer.sequence.global = La numérotation est globale à la plateforme
 
 templateDesigner.displayer.explorer.scope = Identifiant(s)
