Feature #82 : dialog to create an attachment with i18n messages

--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_de.properties
@@ -42,6 +42,10 @@ at = am
 until = bis am
 allVersions = Alle Versionen...
 
+attachment.version.label=Art der Version
+attachment.version_public.label=\u00d6ffentlich
+attachment.version_wip.label=Arbeit
+
 confirm.checkin.message=Wollen Sie die \u00c4nderungen speichern?
 
 CopyLink = Zum Kopieren des Links in diese Datei: Rechtsklick, dann 'Verkn\u00fcpfung kopieren'
