--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_fr.properties
@@ -37,6 +37,10 @@ at = le
 until = jusqu'au
 allVersions = Toutes les versions...
 
+attachment.version.label=Type de la version
+attachment.version_public.label=Public
+attachment.version_wip.label=Travail
+
 confirm.checkin.message=Voulez vous enregistrer vos modifications ?
 
 CopyLink = Pour copier le lien vers ce fichier : Clique droit puis 'Copier le raccourci'
