--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_en.properties
@@ -49,6 +49,11 @@ lier = Link
 downloadInProgress = Upload in progress...
 allVersions = All versions...
 
+
+attachment.version.label=Type of version
+attachment.version_public.label=Public
+attachment.version_wip.label=Work
+
 CopyLink = To copy the link to this file : Right click then 'Copy shortcut'
 
 attachment.SameFileNameAlreadyCheckout = You  have already checked out a file with the same name !<br>To avoid overwriting modifications, you can not check out simultaneously two files with the same name.
