--- a/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/multilang/generalMultilang_fr.properties
@@ -136,6 +136,7 @@ GML.phoneNumber 				= T\u00e9l\u00e9phone
 GML.position 					= Poste
 GML.public 						= Publique
 GML.preview						= Pr\u00e9visualisation
+GML.view							= Visualisation
 GML.previous					= Pr\u00e9c\u00e9dent
 GML.print						= Imprimer
 GML.priority 					= Priorit\u00e9
@@ -332,11 +333,13 @@ GML.validation.create=Les informations ont bien \u00e9t\u00e9 enregistr\u00e9es.
 GML.validation.update=Les informations ont bien \u00e9t\u00e9 mises \u00e0 jour.
 GML.validation.delete=Les informations ont bien \u00e9t\u00e9 supprim\u00e9es.
 GML.confirmation.dialog.title = Confirmation
-
 GML.preview = Pr\u00e9visualiser le fichier
 GML.preview.dialog.title = Aper\u00e7u
 GML.preview.dialog.title.of = de
 GML.preview.help.file.previous = Aper\u00e7u du fichier pr\u00e9c\u00e9dent
 GML.preview.help.file.next = Aper\u00e7u du fichier suivant
+GML.view = Visualiser le fichier
+GML.view.dialog.title = Visualisation
+GML.view.dialog.title.of = de
 GML.Today=Aujourd'hui
 GML.Tomorrow=Demain
