Feature #82 : adding some messages

--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_de.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_de.properties
@@ -86,5 +86,7 @@ attachment.allTranslations = Alle \u00dcbersetzungen
 
 attachment.warning.checkin.locked=Die Datei ist noch im on-line Bearbeitungsmodus. <br/>Bitte schlie\u00dfen Sie sie bevor Sie diese freigeben k\u00f6nnen.
 
-attachment.dialog.delete = Delete this file ?
-attachment.dialog.checkout.nok = File already reserved or error during reservation
+attachment.dialog.delete = L\u00f6schen Sie diese Datei?
+attachment.dialog.checkout.nok = Bereits reserviert Datei oder Fehler bei der Reservierung
+attachment.dialog.comment=Kommentare
+attachment.revert=Revert meine \u00c4nderungen
