--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_en.properties
@@ -83,3 +83,5 @@ attachment.checkOutAndEditOnline = Edit online
 
 attachment.dialog.delete = Delete this file ?
 attachment.dialog.checkout.nok = File already reserved or error during reservation
+attachment.dialog.comment=Comments
+attachment.revert=Revert my modifications
