--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment_fr.properties
@@ -78,5 +78,6 @@ attachment.checkOutAndDownload = R\u00e9server et t\u00e9l\u00e9charger
 attachment.checkOutAndEditOnline = Editer en ligne
 
 attachment.dialog.delete = Supprimer le fichier ?
-
 attachment.dialog.checkout.nok = Fichier d\u00e9j\u00e0 r\u00e9serv\u00e9 ou erreur lors de la r\u00e9servation
+attachment.dialog.comment=Commentaires
+attachment.revert=Abandonner mes modifications
