Feature #3833 - adding the notification sending on attendee response about events handled by personal application "My Diary" - using StringTemplate - using new User Notification API

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_de.properties
@@ -23,12 +23,12 @@
 #
 
 # agenda
-agenda = Mein Kalender 
+agenda = Mein Kalender
 
 # affichage
-jour = Tag 
-semaine = Woche 
-mois = Monat 
+jour = Tag
+semaine = Woche
+mois = Monat
 annee = Yahr
 
 # invitations
@@ -38,7 +38,7 @@ listeInvitations = Liste der Einladungen
 listeDiffusion = Liste der Teilnehmer
 listeDiffusionVide = Keinen
 editionListeDiffusion =  Die Teilnehmer einladen
-listeUtilisateurs = Benutzer 
+listeUtilisateurs = Benutzer
 tentative = Nicht geantwortet
 accepted = Wird teilnehmen
 declined = Wird nicht teilnehmen
@@ -50,47 +50,47 @@ accepterInvitation = Annehmen
 refuserInvitation = Ablehnen
 
 # Categories
-categories = Rubriken 
+categories = Rubriken
 listeCategories = Liste der Rubriken
-listeCategoriesVide = Leer 
+listeCategoriesVide = Leer
 categoriesDispo = Verf\u00fcgbare Rubriken
 editionCategories = Rubriken w\u00e4hlen
 toutesCategories = Alle
 
 # Classification
-classification = Art 
+classification = Art
 public = \u00D6ffentlich
-private = Privat 
+private = Privat
 confidential = Vertraulich
 
 # priorite
-priorite = Priorit\u00e4t 
+priorite = Priorit\u00e4t
 priorite0 = Undefiniert
 priorite1 = Hoch
 priorite2 = Mittel
 priorite3 = Niedrig
 
 # Operation
-fermer = Schliessen 
+fermer = Schliessen
 nouvelleNote = Neues Ereignis
 confirmationSuppressionNote = Sind Sie sicher, das Ereignis l\u00f6schen zu wollen?
 ajouterNote = Neues Ereignis
-ajouter = Hinzuf\u00fcgen 
-supprimer = L\u00f6schen 
+ajouter = Hinzuf\u00fcgen
+supprimer = L\u00f6schen
 mettreAJour = OK
 retourAgenda = Zur\u00fcck zur Agenda
 retour = Zur\u00fcck
 ajoutOk = Ajout OK
 majOk = Hinzuf\u00fcgung OK
 suppressionOk = L\u00f6schung OK
-supprimerNote = L\u00f6schen 
-modifierListeDiffusion = \u00C4ndern 
+supprimerNote = L\u00f6schen
+modifierListeDiffusion = \u00C4ndern
 trouverCreneau = Eine Verf\u00fcgbarkeit finden
 modifierCategories = Die Rubriken \u00e4ndern
 afficherCalendrier = Kalender anzeigen
 mettreAJour = OK
-annuler = Abbrechen 
-retour = Zur\u00fcck 
+annuler = Abbrechen
+retour = Zur\u00fcck
 valider = OK
 
 # attribut note
@@ -98,15 +98,15 @@ editerNote = Bearbeiten eines Ereignisses
 organisateurNote = Organisator
 nomNote = Name
 descriptionNote = Beschreibung
-dateDebutNote = Anfangsdatum 
+dateDebutNote = Anfangsdatum
 heureDebutNote = Anfangszeit
-dateFinNote = Enddatum 
+dateFinNote = Enddatum
 heureFinNote = Schlusszeit
 sansHoraireSpecifique = Ganzer Tag
-mandatoryFields = Obligatorisch 
+mandatoryFields = Obligatorisch
 
 # navigation
-precedent = Vorangehend 
+precedent = Vorangehend
 suivant = Nachfolgend
 aujourdhui = Heute
 
@@ -146,7 +146,7 @@ mois11 = Dezember
 
 # erreur
 utilisateurInconnu = Benutzer unbekannt
-saisieErreur = Eingabefehler: 
+saisieErreur = Eingabefehler:
 dateDebutErreur = Das Anfangsdatum richtig eingeben (z.B.: 01/09/2008)
 dateFinIncorrecte = Das Schlussdatum richtig eingeben (z.B.: 01/09/2008)
 nameErreur = Sie m\u00fcssen den Namen angeben
@@ -156,17 +156,17 @@ heureFinErreur = Sie m\u00fcssen die Schlusszeit angeben, wenn es eine Anfangsze
 heureDebutErreur = Sie m\u00fcssen die Anfangszeit angeben, wenn es eine Schlusszeit hat
 heureFinAvantDebutErreur = Das Schlussdatum muss nach dem Anfangsdatum liegen
 champsTropLong = Die Beschreibungsfelder sind zu lang!
-TheField = das Feld 
-MustContainsText = muss ausgef\u00fcllt werden 
-ContainsTooLargeText = darf nicht gr\u00f6sser sein als 
-NbMaxTextArea = 2000 
+TheField = das Feld
+MustContainsText = muss ausgef\u00fcllt werden
+ContainsTooLargeText = darf nicht gr\u00f6sser sein als
+NbMaxTextArea = 2000
 Characters = Zeichen
-MustContainsCorrectDate = muss ein richtiges Datum enthalten 
-MustContainsPostDateToBeginDate = muss ein Datum nach dem Anfangsdatum enthalten 
-MustContainsPostHourToBeginHour = muss eine Zeit nach der Anfangszeit enthalten 
-ThisFormContains = Achtung, dieses Formular enth\u00e4lt 
-Error = Fehler 
-Errors = Fehler 
+MustContainsCorrectDate = muss ein richtiges Datum enthalten
+MustContainsPostDateToBeginDate = muss ein Datum nach dem Anfangsdatum enthalten
+MustContainsPostHourToBeginHour = muss eine Zeit nach der Anfangszeit enthalten
+ThisFormContains = Achtung, dieses Formular enth\u00e4lt
+Error = Fehler
+Errors = Fehler
 
 # RDV
 NewRDV = Neues Rendezvous
@@ -176,7 +176,7 @@ HeureRDV = um
 ThanksToConfirm = Bitte best\u00e4tigen Sie, ob Sie anwesend sein werden oder nicht
 
 # Agenda sharing
-viewOtherAgenda = Die Agenda eines Benutzers sehen  
+viewOtherAgenda = Die Agenda eines Benutzers sehen
 viewCurrentAgenda = Zur\u00fcck zu Ihrer Agenda
 privateEvent = (Privat)
 userAgenda = Agenda von <b> * </b>
@@ -192,22 +192,19 @@ agenda.CopyAgendaLink = Zum Kopieren des Links in die Agenda dieses Benutzers: R
 # import
 agenda.importSettings = Konfiguration des Imports
 agenda.outlookImportOptions = Outlook Import
-agenda.synchroType = Importierung 
+agenda.synchroType = Importierung
 agenda.outlookSynchro = MS Outlook
 agenda.notesSynchro = Lotus Notes
-agenda.noSynchro = Keine Importierung 
+agenda.noSynchro = Keine Importierung
 agenda.synchroDelay = Periodizit\u00e4t
 agenda.minutes = Minuten
 agenda.hostName = Mein Computer
 
 #Notifications
+titleCreate = Neues Rendezvous
 titleUpdate = Benachrichtigung \u00fcber \u00c4nderungen eines Rendezvous
 titleDelete = Benachrichtigung zur l\u00f6schung eines Rendezvous
-subject = Ihr Rendezvous benannt 
-with = mit
-delayed = wurde verschoben am
-planned = geplant am
-removed = wurde gel\u00f6scht. 
+titleAttend = Notification zur eines Rendezvous
 
 # Rss
 agenda.agenda = Kalender
