--- a/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_en.properties
@@ -72,7 +72,7 @@ priorite3 = Low
 # Operation
 fermer = Close
 nouvelleNote = New event
-confirmationSuppressionNote = Are you sure you want to remove 
+confirmationSuppressionNote = Are you sure you want to remove
 ajouterNote = Add an event
 ajouter = Add
 supprimer = Delete
@@ -112,7 +112,7 @@ aujourdhui = Today
 # jour
 weekFirstDay = 1
 weekLastDay = 7
- 
+
 shortJour2 = M
 shortJour3 = T
 shortJour4 = W
@@ -145,7 +145,7 @@ mois11 = December
 
 # erreur
 utilisateurInconnu = Unknown user
-saisieErreur = Error : 
+saisieErreur = Error :
 dateDebutErreur = Would you please enter a valid start date (ex : 12/25/2000)
 dateFinIncorrecte = Would you please enter a valid start end (ex : 12/25/2000)
 nameErreur = Name attribute is mandatory
@@ -155,27 +155,27 @@ heureFinErreur = End hour is mandatory is begin hour is defined
 heureDebutErreur = Start hour is mandatory is end hour is defined
 heureFinAvantDebutErreur = End hour has to be after begin hour
 champsTropLong = Description is too long !
-TheField = the field 
-MustContainsText = must contain text 
-ContainsTooLargeText = must contain a text smaller than 
-NbMaxTextArea = 2000 
+TheField = the field
+MustContainsText = must contain text
+ContainsTooLargeText = must contain a text smaller than
+NbMaxTextArea = 2000
 Characters = characters
-MustContainsCorrectDate = must contain a correct date 
+MustContainsCorrectDate = must contain a correct date
 MustContainsPostDateToBeginDate = must contain a date later than the start date
 MustContainsPostHourToBeginHour = must contain an hour later than the start hour
-ThisFormContains = Careful, this form contains 
-Error = error 
-Errors = errors 
+ThisFormContains = Careful, this form contains
+Error = error
+Errors = errors
 
 # RDV
 NewRDV = New appointement
-NewRDVcalled = give you an appointment named 
+NewRDVcalled = give you an appointment named
 JourRDV = the
-HeureRDV = at 
+HeureRDV = at
 ThanksToConfirm = Thanks to confirm your attendance
 
 #Agenda sharing
-viewOtherAgenda = View the diary of another user 
+viewOtherAgenda = View the diary of another user
 viewCurrentAgenda = Back to my diary
 privateEvent = (Private)
 userAgenda = <b>*</b>'s diary
@@ -201,13 +201,10 @@ agenda.hostName = My computer
 agenda.CopyPhotoLink = To copy the link to the diary of this user : Right click then 'Copy shortcut'
 
 #Notifications
+titleCreate = New appointement
 titleUpdate = Notification of event change in the diary
 titleDelete = Notification of event remove in the diary
-subject = Your event in the diary titled
-with = with
-delayed = has been changed to date 
-planned = planned at 
-removed = has been removed. 
+titleAttend = Notification of event in the diary
 
 #Rss
 agenda.agenda = Diary
@@ -239,5 +236,5 @@ agenda.SynchroFailed = The synchronization has failed.
 agenda.SynchroSucceeded = Synchronization successfully done.
 agenda.Subscribe = Private link to this diary
 
-agenda.ChooseDaysOff = Select the 
+agenda.ChooseDaysOff = Select the
 agenda.DaysOffSilver = days off
