--- a/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_fr.properties
@@ -23,12 +23,12 @@
 #
 
 # agenda
-agenda = Mon agenda 
+agenda = Mon agenda
 
 # affichage
-jour = Jour 
-semaine = Semaine 
-mois = Mois 
+jour = Jour
+semaine = Semaine
+mois = Mois
 annee = Ann\u00E9e
 
 # invitations
@@ -36,9 +36,9 @@ listeInvitations = Liste des invitations
 
 # Liste de diffusion
 listeDiffusion = Liste des participants
-listeDiffusionVide = Aucun 
+listeDiffusionVide = Aucun
 editionListeDiffusion =  Inviter des participants
-listeUtilisateurs = Utilisateurs 
+listeUtilisateurs = Utilisateurs
 tentative = N'a pas r\u00E9pondu
 accepted = Participera
 declined = Ne participera pas
@@ -50,16 +50,16 @@ accepterInvitation = Accepter
 refuserInvitation = Refuser
 
 # Categories
-categories = Rubriques 
+categories = Rubriques
 listeCategories = Liste des rubriques
-listeCategoriesVide = Aucune 
+listeCategoriesVide = Aucune
 categoriesDispo = Rubriques disponibles
 editionCategories = S\u00E9lectionner des rubriques
-toutesCategories = Toutes 
+toutesCategories = Toutes
 
 # Classification
-classification = Type 
-public = Publique 
+classification = Type
+public = Publique
 private = Priv\u00E9e
 confidential = Confidentielle
 
@@ -71,43 +71,43 @@ priorite2 = Moyenne
 priorite3 = Basse
 
 # Operation
-fermer = Fermer 
+fermer = Fermer
 nouvelleNote = Nouvel \u00E9v\u00E9nement
 confirmationSuppressionNote = Etes-vous s\u00FBr de vouloir supprimer l'\u00E9v\u00E9nement
 ajouterNote = Nouvel \u00E9v\u00E9nement
-ajouter = Ajouter 
-supprimer = Supprimer 
+ajouter = Ajouter
+supprimer = Supprimer
 mettreAJour = Valider
 retourAgenda = Retour \u00E0 l'agenda
 retour = Retour
 ajoutOk = Ajout OK
 majOk = Mise \u00E0 jour OK
 suppressionOk = Suppression OK
-supprimerNote = Supprimer 
-modifierListeDiffusion = Modifier 
+supprimerNote = Supprimer
+modifierListeDiffusion = Modifier
 trouverCreneau = Trouver une disponibilit\u00E9
 modifierCategories = Modifier les rubriques
 afficherCalendrier = Afficher le calendrier
-mettreAJour = Valider 
-annuler = Annuler 
-retour = Retour 
-valider = Valider 
+mettreAJour = Valider
+annuler = Annuler
+retour = Retour
+valider = Valider
 
 # attribut note
 editerNote = Edition d'un \u00E9v\u00E8nement
 organisateurNote = Organisateur
-nomNote = Nom 
-descriptionNote = Description 
+nomNote = Nom
+descriptionNote = Description
 dateDebutNote = Date de d\u00E9but
 heureDebutNote = Heure de d\u00E9but
-dateFinNote = Date de fin 
+dateFinNote = Date de fin
 heureFinNote = Heure de fin
 sansHoraireSpecifique = Journ\u00E9e enti\u00E8re
-mandatoryFields = Obligatoire 
+mandatoryFields = Obligatoire
 
 # navigation
 precedent = Pr\u00E9c\u00E9dent
-suivant = Suivant 
+suivant = Suivant
 aujourdhui = Aujourd'hui
 
 # jour
@@ -156,17 +156,17 @@ heureFinErreur = Vous devez indiquer l'heure de fin s'il y a une heure de d\u00E
 heureDebutErreur = Vous devez indiquer l'heure de d\u00E9but s'il y a une heure de fin
 heureFinAvantDebutErreur = La date de fin doit succ\u00E9der la date de d\u00E9but
 champsTropLong = Champs description trop long !
-TheField = le champ 
+TheField = le champ
 MustContainsText = doit \u00EAtre renseign\u00E9
 ContainsTooLargeText = ne doit pas exc\u00E9der
-NbMaxTextArea = 2000 
+NbMaxTextArea = 2000
 Characters = caract\u00E8res
-MustContainsCorrectDate = doit contenir une date correcte 
+MustContainsCorrectDate = doit contenir une date correcte
 MustContainsPostDateToBeginDate = doit contenir une date post\u00E9rieure \u00E0 la date de d\u00E9but
 MustContainsPostHourToBeginHour = doit contenir une heure post\u00E9rieure \u00E0 l'heure de d\u00E9but
-ThisFormContains = Attention, ce formulaire contient 
-Error = erreur 
-Errors = erreurs 
+ThisFormContains = Attention, ce formulaire contient
+Error = erreur
+Errors = erreurs
 
 # RDV
 NewRDV = Nouveau RDV
@@ -176,7 +176,7 @@ HeureRDV = \u00E0
 ThanksToConfirm = Merci de confirmer ou non votre pr\u00E9sence
 
 # Agenda sharing
-viewOtherAgenda = Voir l'agenda d'un utilisateur 
+viewOtherAgenda = Voir l'agenda d'un utilisateur
 viewCurrentAgenda = Revenir \u00E0 votre agenda
 privateEvent = (Priv\u00E9)
 userAgenda = Agenda de <b> * </b>
@@ -200,13 +200,10 @@ agenda.minutes = minutes
 agenda.hostName = Mon ordinateur
 
 #Notifications
+titleCreate = Nouveau RDV
 titleUpdate = Notification de changement d'un RDV
 titleDelete = Notification de suppression d'un RDV
-subject = Votre rendez-vous intitul\u00E9
-with = avec
-delayed = a \u00E9t\u00E9 d\u00E9cal\u00E9 le
-planned = pr\u00E9vu le
-removed = a \u00E9t\u00E9 supprim\u00E9.
+titleAttend = Notification de participation \u00e0 un RDV
 
 #Rss
 agenda.agenda = Agenda
